--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,5 +8,5 @@ steps:
       - --trigger-http
       - --allow-unauthenticated
       - --entry-point=PartialUpdateEmployee
-      - --region=europe-west1
+      - --region=us-central1
       - --project=takeoff-task-3
